fix: grant write permission to docs job for gh-pages preview deployment (#1138)
The pr-preview-action needs contents:write to push the docs preview
to the gh-pages branch. Without it, the push fails with HTTP 401 on
pull request builds.

--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -116,6 +116,8 @@ jobs:
     name: Generate tool and metric markdown docs
     needs: test
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     if: ${{ github.event_name != 'workflow_call' && (github.event_name == 'pull_request' || (github.repository == 'fulcrumgenomics/fgbio' && github.ref == 'refs/heads/main')) }}
     steps:
       - name: Checkout
